<resources>
    <string name="app_name">Dr.Booking</string>
    <string name="serve">احجز</string>
    <string name="login">دخول</string>
    <string name="user">الاسم</string>
    <string name="pass">كلمه السر</string>
    <string name="forgotpassword">نسيت كلمه السر؟</string>
    <string name="or">OR</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="donthaveaccount">لا امتلك حساب؟</string>
    <string name="email">البريد الالكترونى</string>
    <string name="phone">الهاتف</string>
    <string name="signup">تسجيل</string>
    <string name="loginn">تسجيل الدخول؟ </string>
    <string name="notifcation">الاشعارات</string>
    <string name="paymentmethod">طريقة الدفع</string>
    <string name="editdata">تعديل البيانات</string>
    <string name="chooselan">اختار اللفة</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="products">المنتجات</string>
    <string name="searchdoctor">ماهى اعراض مرضك؟</string>
    <string name="appoiements">حجوزاتى</string>
    <string name="myproducts">منتجاتى</string>
    <string name="edit">تعديل</string>
    <string name="close">اغلاق</string>
    <string name="wishlist">مفضلتى</string>
    <string name="mypassword">كلمة السر الحالية</string>
    <string name="newpassword">كلمة سر جديده</string>
    <string name="retypepassword">اعاده كتابة كلمه السر</string>
    <string name="peopleratings">تقييم</string>
    <string name="send">ارسال</string>
    <string name="note">يتم الفصل بين الاعراض بـ " , " مثال (بوتكس,جراحه عيون,شفط دهون)</string>
</resources>
