<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/appback"
    tools:context="com.begroup.besoultion.drbooking.view.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/booking"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_25sdp"
                android:paddingRight="@dimen/_25sdp">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:background="@android:color/white"
                    android:hint="@string/email"
                    android:gravity="right"
                    android:paddingTop="@dimen/_10sdp"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_40sdp"
                    android:textSize="@dimen/_13ssp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:id="@+id/password"
                    android:background="@android:color/white"
                    android:hint="@string/pass"
                    android:paddingLeft="@dimen/_5sdp"
                    android:gravity="right"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingRight="@dimen/_40sdp"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_13ssp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_5sdp"
                    android:text="@string/login"
                    android:id="@+id/signin"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_13ssp"
                    android:background="@color/appback" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_19sdp"
                    android:textColor="@android:color/white"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/_11sdp"
                    android:textSize="@dimen/_13ssp"
                    android:id="@+id/forgetpass"
                    android:text="@string/forgotpassword"/>
                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="1sp"
                    android:layout_gravity="right"
                    android:background="@android:color/white"/>

            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/_8ssp"
                android:layout_marginRight="@dimen/_35sdp"
                app:srcCompat="@drawable/ic_email_black_24dp" />
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/_43ssp"
                android:layout_marginRight="@dimen/_35sdp"
                android:src="@drawable/lockk" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_19sdp"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/gotosignup"
            android:textSize="@dimen/_13ssp"
            android:text="@string/donthaveaccount"/>
        <ImageView
            android:layout_width="@dimen/_75sdp"
            android:layout_height="1sp"
            android:layout_gravity="center"
            android:background="@android:color/white"/>
    </LinearLayout>
</LinearLayout>