<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/appback"
    tools:context="com.begroup.besoultion.drbooking.view.changePassword">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/booking"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_25sdp"
                android:paddingRight="@dimen/_25sdp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@android:color/white"
                    android:gravity="right"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:hint="@string/mypassword"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingRight="@dimen/_40sdp"
                    android:textSize="@dimen/_13ssp" />

                <EditText
                    android:id="@+id/newpassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@android:color/white"
                    android:hint="@string/mypassword"
                    android:gravity="right"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:paddingTop="@dimen/_10sdp"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_40sdp"
                    android:textSize="@dimen/_13ssp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:id="@+id/retypepassword"
                    android:background="@android:color/white"
                    android:hint="@string/newpassword"
                    android:paddingLeft="@dimen/_5sdp"
                    android:gravity="right"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingRight="@dimen/_40sdp"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_13ssp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_5sdp"
                    android:text="@string/edit"
                    android:id="@+id/edit"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_13ssp"
                    android:background="@color/appback" />


            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/_8ssp"
                android:layout_marginRight="@dimen/_35sdp"
                android:src="@drawable/lockk" />
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/_43ssp"
                android:layout_marginRight="@dimen/_35sdp"
                android:src="@drawable/lockk" />
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/_83ssp"
                android:layout_marginRight="@dimen/_35sdp"
                android:src="@drawable/lockk" />
        </RelativeLayout>


    </LinearLayout>
</LinearLayout>