<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/appback"
    tools:context="com.begroup.besoultion.drbooking.view.searchActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:src="@drawable/booking"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_17ssp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/white"
            android:text="ابحث الان على الطبيب المناسب"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            app:cardElevation="@dimen/_4sdp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="@dimen/_4sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="right"
                android:weightSum="1">
                <ViewSwitcher
                    android:layout_weight=".2"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/viewswitch">
                    <Button
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:text="بحث"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        android:background="@drawable/buttongrayback"
                        android:layout_height="@dimen/_22sdp" />
                <Button
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:text="بحث"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:id="@+id/search"
                    android:background="@drawable/buttonback"
                    android:layout_height="@dimen/_22sdp" />
                </ViewSwitcher>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight=".79"
                    android:id="@+id/editSearch"
                    android:gravity="right"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/searchdoctor"
                    android:paddingRight="@dimen/_10sdp"
                    android:textSize="@dimen/_13ssp" />


            </LinearLayout>
        </android.support.v7.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12ssp"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:text="@string/note"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="تخطى؟"
            android:id="@+id/skip"
            android:layout_marginTop="@dimen/_40sdp"
            android:textSize="@dimen/_15ssp"
            android:gravity="center"
            android:textColor="@android:color/white"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@android:color/white"/>
    </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        app:itemBackground="@drawable/bottombg"
        app:itemIconTint="@color/iconcolor"
        app:itemTextColor="@color/iconcolor"
        android:background="@android:color/white"
        app:labelVisibilityMode="labeled"
        app:tabTextAppearance="@style/BottomCustomTabText"
        app:menu="@menu/bar"
        tools:ignore="RtlCompat"></android.support.design.widget.BottomNavigationView>
</RelativeLayout>